--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm": "*"
   },
   "scripts": {
+    "watch": "DEV_MODE=true nodemon server.js",
     "start": "node server.js",
     "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
   },
