--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "watch": "nodemon index.js",
     "start": "node index.js",
     "test": "node test.js"
   },
